--- a/hw-june2022/html/lesson3/Cards2.html
+++ b/hw-june2022/html/lesson3/Cards2.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="css/stule2.css">
 </head>
 <body>
+<div class="ads">
+    <div class="high">
+        <div class="target">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+    </div>
+    <div class="low">
+        <div class="header">
+            <div class="bat" ></div>
+            <div class="icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-align-justify"></i>
+            </div>
+        </div>
+        <div class="content">
 
+        </div>
+    </div>
+</div>
+
+<script src="https://kit.fontawesome.com/6f00b3d3a7.js" crossorigin="anonymous"></script>
 </body>
 </html>
