--- a/hw-june2022/html/lesson3/Cards1.html
+++ b/hw-june2022/html/lesson3/Cards1.html
@@ -25,17 +25,17 @@
         <div class="box">
             <h2>Responsive Design</h2>
             <p>Flat bootstrap resposive our services box free download. Download and use it</p>
-            <div class="bat"><a href="Cards2.html">Learn more</a></div>
+            <div class="bat"><a href="Cards2.html" target="_blank">Learn more</a></div>
         </div>
         <div class="box">
             <h2>User Interface Design</h2>
             <p>Flat bootstrap resposive our services box free download. Download and use it</p>
-            <div class="bat"><a href="Cards2.html">Learn more</a></div>
+            <div class="bat"><a href="Cards2.html" target="_blank">Learn more</a></div>
         </div>
         <div class="box">
             <h2>Web Development</h2>
             <p>Flat bootstrap resposive our services box free download. Download and use it</p>
-            <div class="bat" ><a href="Cards2.html">Learn more</a></div>
+            <div class="bat"><a href="Cards2.html" target="_blank">Learn more</a></div>
         </div>
     </div>
 </div>
