--- a/hw-june2022/html/lesson4/adaptive_base1.html
+++ b/hw-june2022/html/lesson4/adaptive_base1.html
@@ -11,18 +11,12 @@
 </head>
 <body>
     <div class="ads">
-        <div class="agnieszka">
-            <h2>A</h2>
-        </div>
+        <div class="agnieszka">A</div>
         <div class="father">
             <div class="children">
-                <div class="brian">
-                    <h2>B</h2>
-                </div>
+                <div class="brian">B</div>
             </div>
-            <div class="connor">
-                <h2>C</h2>
-            </div>
+            <div class="connor">C</div>
         </div>
     </div>
 </body>
