--- a/hw-june2022/html/lesson4/adaptive_base2.html
+++ b/hw-june2022/html/lesson4/adaptive_base2.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-
+<div class="ads">
+    <div class="con_a">A</div>
+    <div class="father">
+        <div class="bcde">
+            <div class="con_b">B</div>
+            <div class="cde">
+                <div class="con_c">C</div>
+                <div class="con_d">D</div>
+                <div class="con_e">E</div>
+            </div>
+        </div>
+        <div class="con_f">F</div>
+    </div>
+</div>
 </body>
 </html>
